--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/docshare
+#spring.datasource.url=jdbc:mysql://localhost:3306/docshare
+implementation group: 'com.google.cloud.sql', name: 'postgres-socket-factory', version: '1.13.0'
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
