--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ dependencies {
 // https://mvnrepository.com/artifact/com.paypal.sdk/rest-api-sdk
 implementation group: 'com.paypal.sdk', name: 'rest-api-sdk', version: '1.14.0'
 implementation group: 'com.google.cloud.sql', name: 'postgres-socket-factory', version: '1.13.0'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent
+implementation group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '3.1.1', ext: 'pom'
+
 }
 test {
     useJUnitPlatform()
